@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.1.0
+  * SCHEMA-380. Version pagers may now be created on fully-qualified columns
+      belonging to paging-enabled map-type families.
   * SCHEMA-355. KijiRowKeySplitter is parametrized by row key resolution.
   * SCHEMA-346. AtomicKijiPutter is no longer restricted to writing within a
       single locality group.  Calls to commit() no longer accept a locality group name.
